[package]
name = "tuya_util"
author = "Peter Leconte"
version = "0.1.0"
edition = "2021"
description = "Utility for Tuya smart meter devices"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.8", features = ["derive", "env"] }
dotenv = "0.15.0"
hmac = "0.12.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
url = "2"
